Add Delete Promotion At PromotionPage
